[gd_scene load_steps=9 format=2]

[ext_resource path="res://Title/title.png" type="Texture" id=1]
[ext_resource path="res://Title/title.gd" type="Script" id=2]
[ext_resource path="res://Weather/textures/cool_02.png" type="Texture" id=3]
[ext_resource path="res://fonts/ラノベPOP.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Title/op.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 778.153, 10 )

[sub_resource type="DynamicFont" id=3]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="title" type="TextureButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 174.0
margin_top = -2.0
margin_right = 804.0
margin_bottom = 498.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 318.518, 251.533 )
z_index = -1
texture = ExtResource( 3 )
_sections_unfolded = [ "Z Index" ]

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="pos1" type="Position2D" parent="." index="2"]

position = Vector2( 101.43, -53.9539 )

[node name="pos2" type="Position2D" parent="." index="3"]

position = Vector2( 822.983, -53.9539 )

[node name="kill" type="Area2D" parent="." index="4"]

position = Vector2( -104.142, 530.006 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="shape" type="CollisionShape2D" parent="kill" index="0"]

position = Vector2( 474.884, 42.4788 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 190.0
margin_top = 447.0
margin_right = 417.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press Any Key"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts" ]

[node name="anim" type="AnimationPlayer" parent="Label" index="0"]

root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 2 )
blend_times = [  ]

[node name="Bgm" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 5 )
volume_db = -25.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="pressed" from="." to="." method="_on_title_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="body_entered" from="kill" to="." method="_on_kill_body_entered"]


